--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   http: ^0.13.4
   intl: ^0.17.0
   provider: ^6.0.3
+  searchfield: ^0.6.6
   shared_preferences: ^2.0.15
   table_calendar: ^3.0.6
 
