--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_localized_locales: ^2.0.3
   flutter_secure_storage: ^5.0.2
   flutter_svg: ^1.1.0
+  flutter_typeahead: ^4.0.0
   http: ^0.13.4
   intl: ^0.17.0
   provider: ^6.0.3
