--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,9 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - data/eventexample.json
+
+    
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
